using UnityEngine;

public class PlayerController : MonoBehaviour
{
    public float speed = 5f;
    public float jumpForce = 5f;
    public float turnSmoothTime = 0.1f;
    public int health = 100;
    private float turnSmoothVelocity;
    private bool isSitting = false;
    private bool isDead = false;
    public CrosshairController crosshairController; 


    //Rigid body ‡πÉ‡∏ä‡πâ‡πÉ‡∏ô‡∏Å‡∏≤‡∏£‡∏Ç‡∏¢‡∏±‡∏ö‡∏ï‡∏±‡∏ß
    private Rigidbody rb;


    //Animator ‡πÉ‡∏ä‡πâ‡πÉ‡∏ô‡∏Å‡∏≤‡∏£‡∏Ñ‡∏ß‡∏ö‡∏Ñ‡∏∏‡∏°‡∏Å‡∏≤‡∏£‡πÄ‡∏Ñ‡∏•‡∏∑‡πà‡∏≠‡∏ô‡πÑ‡∏´‡∏ß‡∏Ç‡∏≠‡∏á‡∏ï‡∏±‡∏ß‡∏•‡∏∞‡∏Ñ‡∏£
    private Animator animator;

    public Transform cameraTransform;

    //check if player is on the ground
    public LayerMask groundLayer;//‡∏ö‡∏≠‡∏Å‡∏ß‡πà‡∏≤‡∏ï‡∏£‡∏á‡∏ó‡∏µ‡πà‡πÑ‡∏´‡∏ô‡πÄ‡∏õ‡πá‡∏ô‡∏û‡∏∑‡πâ‡∏ô
    public Transform groundCheck;//‡∏à‡∏∏‡∏îcheck‡∏û‡∏∑‡πâ‡∏ô‡∏ß‡∏≤‡∏á‡πÉ‡∏ï‡πâ‡∏ï‡∏±‡∏ß‡∏•‡∏∞‡∏Ñ‡∏£
    public float groundDistance = 0.6f;//‡∏£‡∏±‡∏®‡∏°‡∏µ‡∏Ç‡∏≠‡∏á sphree ‡∏ó‡∏µ‡πà‡πÉ‡∏ä‡πâ‡∏ï‡∏£‡∏ß‡∏à‡∏™‡∏≠‡∏ö‡∏û‡∏∑‡πâ‡∏ô
    private bool isGrounded;//‡πÄ‡∏ä‡πá‡∏Ñ‡∏ß‡πà‡∏≤‡∏ï‡∏±‡∏ß‡∏•‡∏∞‡∏Ñ‡∏£‡∏≠‡∏¢‡∏π‡πà‡∏ö‡∏ô‡∏û‡∏∑‡πâ‡∏ô‡∏´‡∏£‡∏∑‡∏≠‡πÑ‡∏°‡πà

    public float mouseSensitivity = 2f;

    float yaw;


    void Start()
    {
        Cursor.lockState = CursorLockMode.Locked;
        Cursor.visible = false;
        yaw = transform.eulerAngles.y;

        rb = GetComponent<Rigidbody>();
        animator = GetComponent<Animator>();
        animator.applyRootMotion = false; // üõë Prevent animation from moving the character

        if (cameraTransform == null)
            cameraTransform = Camera.main.transform;
    }


    void FixedUpdate()
    {
        isGrounded = Physics.CheckSphere(groundCheck.position, groundDistance, groundLayer);
        // Debug.Log($"Grounded: {isGrounded}");
        animator.SetBool("isGrounded", isGrounded);
    }


    void Update()
    {
        float horizontal = Input.GetAxisRaw("Horizontal");
        float vertical = Input.GetAxisRaw("Vertical");

        MoveWithCameraDirection();

        if (Input.GetKeyDown(KeyCode.Space))
        {
            Jump();
        }

        if (Input.GetMouseButtonDown(0))
        {
            Shoot();
        }

        if (Input.GetKeyDown(KeyCode.Q))
        {
            Sit();
        }
    }

    void Shoot()
    {
        animator.SetTrigger("Shoot");
    }

    void Sit()
    {
        isSitting = !isSitting; // Toggle sitting state

        animator.SetBool("isSitting", isSitting);
    }

    void Jump()
    {
        animator.SetTrigger("Jump");
    }

    public void TakeDamage(int amount)
    {
        if (isDead) return;

        health -= amount;
        if (health <= 0)
        {
            health = 0;
            Die();
        }
        else
        {
            // Flash crosshair red on damage
            if (crosshairController != null)
                crosshairController.FlashDamage();
        }
    }

    void Die()
    {
        isDead = true;
        animator.SetTrigger("Dead");
        this.enabled = false; // disable player control or movement scripts here
    }

    void OnDrawGizmosSelected()
    {
        if (groundCheck == null) return;

        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(groundCheck.position, groundDistance);
    }

    void MoveWithCameraDirection()
    {
        float horizontal = Input.GetAxisRaw("Horizontal");
        float vertical = Input.GetAxisRaw("Vertical");

        float inputSpeed = Input.GetKey(KeyCode.LeftShift) ? 1f : 0.5f;
        Vector3 inputDirection = new Vector3(horizontal, 0f, vertical).normalized;

        if (inputDirection.magnitude >= 0.1f)
        {
            // Calculate movement direction relative to camera
            float targetAngle = Mathf.Atan2(inputDirection.x, inputDirection.z) * Mathf.Rad2Deg + cameraTransform.eulerAngles.y;
            float smoothAngle = Mathf.SmoothDampAngle(transform.eulerAngles.y, targetAngle, ref turnSmoothVelocity, turnSmoothTime);

            // üëâ Rotate character to face movement direction
            transform.rotation = Quaternion.Euler(0f, smoothAngle, 0f);

            Vector3 moveDirection = Quaternion.Euler(0f, targetAngle, 0f) * Vector3.forward;
            rb.MovePosition(rb.position + moveDirection.normalized * speed * inputSpeed * Time.deltaTime);

            animator.SetFloat("Speed", inputSpeed); // 0.5f = walk, 1f = run
        }
        else
        {
            animator.SetFloat("Speed", 0f);
        }

        // ‚úÖ Mouse look around (camera already follows the player)
        float mouseX = Input.GetAxis("Mouse X") * mouseSensitivity;
        yaw += mouseX;
        cameraTransform.RotateAround(transform.position, Vector3.up, mouseX); // makes camera orbit if needed
    }
}